<resources>
    <string name="app_name">Rocket Launch Weather</string>
    <string name="base_placeholder_text">Enter</string>
    <string name="search_weather">Search Weather</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="search_city">Search City</string>
    <string name="current_gps">Current Gps</string>
    <string name="temperature">Temperature</string>
    <string name="short_temperature">Temp</string>
    <string name="apparent_temperature">Apparent Temperature</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind_gust">Wind Gust</string>
    <string name="wind_bearing">Wind Bearing</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="daily_summary">Daily Summary</string>
    <string name="hourly_summary">Hourly Summary</string>
    <string name="hour">Hour</string>
    <string name="unsafe_hour">Unsafe Hour</string>
</resources>