<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:gravity="center_horizontal"
    android:background="?android:attr/selectableItemBackground">

    <!-- Summary -->
    <TextView
        android:text="@string/hourly_summary"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/hourly_summary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!-- Hour -->
    <TextView
        android:text="@string/hour"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/hour_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!-- Temp -->
    <TextView
        android:text="@string/short_temperature"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/temp_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!-- Wind -->
    <TextView
        android:text="@string/wind_speed"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/wind_speed_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!-- Gust -->
    <TextView
        android:text="@string/wind_gust"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/wind_gust_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!-- Wind Direction -->
    <TextView
        android:text="@string/wind_direction"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/wind_bearing_arrow"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_arrow_upward"
        android:contentDescription="@+id/wind_direction"/>
</LinearLayout>