<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="16dp">

    <!-- City and State Text -->
    <LinearLayout
        android:id="@+id/city_state_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="16dp">

        <Space
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <TextView
            android:id="@+id/selected_city_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"/>

        <Space
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <TextView
            android:id="@+id/selected_state_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"/>

        <Space
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

    </LinearLayout>

    <!-- Latitude and Longitude Text -->
    <LinearLayout
        android:id="@+id/lat_lon_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/lat_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp" />

        <TextView
            android:id="@+id/lon_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/longitude"/>
    </LinearLayout>

    <!-- City and State Input Fields -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/selected_city_input"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="text"
            android:hint="@string/city"/>

        <EditText
            android:id="@+id/selected_state_input"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="text"
            android:hint="@string/state"/>
    </LinearLayout>

    <!-- Search Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/selected_city_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_city"
            android:layout_gravity="center"/>

        <Space
            android:layout_width="32dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/get_gps_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_gps"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>
